--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(planlogger)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp message_generation)
+find_package(catkin REQUIRED COMPONENTS roscpp message_generation designator_integration designator_integration_msgs)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -37,6 +37,7 @@ add_service_files(
 ## Generate added messages and services with any dependencies listed here
 generate_messages(
   DEPENDENCIES
+  designator_integration_msgs
 #   std_msgs  # Or other packages containing msgs
 )
 
@@ -51,7 +52,7 @@ generate_messages(
 catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES planlogger
-  CATKIN_DEPENDS roscpp message_runtime
+  CATKIN_DEPENDS roscpp message_runtime designator_integration designator_integration_msgs
 #  DEPENDS system_lib
 )
 
@@ -63,6 +64,7 @@ catkin_package(
 ## Your package locations should be listed before other locations
 include_directories(include
   ${catkin_INCLUDE_DIRS}
+  include
 )
 
 ## Declare a cpp library
@@ -70,16 +72,40 @@ include_directories(include
 #   src/${PROJECT_NAME}/planlogger.cpp
 # )
 
+add_library(PlanLogging
+  src/planlogging/CPlanLogger.cpp
+  src/planlogging/CPlanNode.cpp)
+add_library(PlanLoggingROS
+  src/planlogging/CPlanLoggerROS.cpp)
+
+add_dependencies(PlanLogging designator_integration_generate_messages_cpp message_generation message_runtime)
+add_dependencies(PlanLoggingROS PlanLogging)
+
 ## Declare a cpp executable
 add_executable(planlogger_node src/node.cpp)
+
+add_executable(planlogger src/main.cpp)
+add_dependencies(planlogger designator_integration_generate_messages_cpp PlanLogging PlanLoggingROS)
 
 ## Add cmake target dependencies of the executable/library
 ## as an example, message headers may need to be generated before nodes
 # add_dependencies(planlogger_node planlogger_generate_messages_cpp)
 
 ## Specify libraries to link a library or executable target against
+target_link_libraries(PlanLoggingROS
+  ${catkin_LIBRARIES}
+  PlanLogging
+  DesignatorIntegration
+)
+
 target_link_libraries(planlogger_node
   ${catkin_LIBRARIES}
+)
+
+target_link_libraries(planlogger
+  ${catkin_LIBRARIES}
+  PlanLogging
+  PlanLoggingROS
 )
 
 #############
