--- a/package.xml
+++ b/package.xml
@@ -42,6 +42,12 @@
   <buildtool_depend>catkin</buildtool_depend>
   <build_depend>message_generation</build_depend>
   <run_depend>message_runtime</run_depend>
+  <build_depend>designator_integration_msgs</build_depend>
+  <build_depend>designator_integration</build_depend>
+  <build_depend>geometry_msgs</build_depend>
+  <run_depend>designator_integration_msgs</run_depend>
+  <run_depend>designator_integration</run_depend>
+  <run_depend>geometry_msgs</run_depend>
 
   <build_depend>roscpp</build_depend>
   <run_depend>roscpp</run_depend>
