Added images as optional data elements and added the source field to plan nodes

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -71,7 +71,9 @@ include_directories(include
 
 add_library(PlanLogging
   src/planlogging/CPlanLogger.cpp
-  src/planlogging/CPlanNode.cpp)
+  src/planlogging/CPlanNode.cpp
+  src/planlogging/CImage.cpp)
+
 add_library(PlanLoggingROS
   src/planlogging/CPlanLoggerROS.cpp)
 
