Added funtionality to associate objects with nodes
This feature will primarily be used in conjunction with perception, as the percepts will be associated and displayed this way when the perception system returns its results. This way, all perception results are properly anchored in the plan log.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,7 +72,8 @@ include_directories(include
 add_library(PlanLogging
   src/planlogging/CPlanLogger.cpp
   src/planlogging/CPlanNode.cpp
-  src/planlogging/CImage.cpp)
+  src/planlogging/CImage.cpp
+  src/planlogging/CObject.cpp)
 
 add_library(PlanLoggingROS
   src/planlogging/CPlanLoggerROS.cpp)
