--- a/package.xml
+++ b/package.xml
@@ -45,9 +45,13 @@
   <build_depend>designator_integration_msgs</build_depend>
   <build_depend>designator_integration</build_depend>
   <build_depend>geometry_msgs</build_depend>
+  <build_depend>sensor_msgs</build_depend>
+  <build_depend>cv_bridge</build_depend>
   <run_depend>designator_integration_msgs</run_depend>
   <run_depend>designator_integration</run_depend>
   <run_depend>geometry_msgs</run_depend>
+  <run_depend>sensor_msgs</run_depend>
+  <run_depend>cv_bridge</run_depend>
 
   <build_depend>roscpp</build_depend>
   <run_depend>roscpp</run_depend>
