--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,7 +4,7 @@ project(planlogger)
 ## Find catkin macros and libraries
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS roscpp message_generation designator_integration designator_integration_msgs sensor_msgs cv_bridge)
+find_package(catkin REQUIRED COMPONENTS roscpp message_generation designator_integration designator_integration_msgs sensor_msgs cv_bridge roslib)
 
 ## System dependencies are found with CMake's conventions
 # find_package(Boost REQUIRED COMPONENTS system)
@@ -49,7 +49,7 @@ generate_messages(
 catkin_package(
   INCLUDE_DIRS include
 #  LIBRARIES planlogger
-  CATKIN_DEPENDS roscpp message_runtime designator_integration designator_integration_msgs sensor_msgs cv_bridge
+  CATKIN_DEPENDS roscpp roslib message_runtime designator_integration designator_integration_msgs sensor_msgs cv_bridge
 #  DEPENDS system_lib
 )
 
