Separated the file writing capabilities for exporters into a separate class and created a preliminary version of the new OWL exporter.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,6 +82,8 @@ add_library(PlanLoggingROS
 add_library(LogExporter
   src/export/CExporter.cpp
   src/export/CExporterDot.cpp
+  src/export/CExporterOwl.cpp
+  src/export/CExporterFileoutput.cpp
   src/export/CNode.cpp)
 
 add_dependencies(PlanLogging designator_integration_generate_messages_cpp message_generation message_runtime)
