--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,6 +84,7 @@ add_library(LogExporter
   src/export/CExporterDot.cpp
   src/export/CExporterOwl.cpp
   src/export/CExporterFileoutput.cpp
+  src/export/CExporterMongoDB.cpp
   src/export/CNode.cpp)
 
 add_dependencies(PlanLogging designator_integration_generate_messages_cpp message_generation message_runtime)
