Completed framework code on the MongoDB exporter. Now only the BSONObj generation is missing.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -103,6 +103,7 @@ add_dependencies(planlogger designator_integration_generate_messages_cpp PlanLog
 target_link_libraries(LogExporter
   ${catkin_LIBRARIES}
   DesignatorIntegration
+  mongoclient
 )
 
 target_link_libraries(PlanLogging
